[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-impact-mvp"
version = "0.1.0"
description = "MVP package for causal impact analysis"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "pandas>=1.5"]
